--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <b>Visita https://mateytaller.github.io/</b><a href="https://mateytaller.github.io/"><img src="https://cghv94.github.io/IMG_20200924_092539.png" width="200" /></a>
+    <b>Visita https://mateytaller.github.io/</b></br><a href="https://mateytaller.github.io/"><img src="https://cghv94.github.io/IMG_20200924_092539.png" width="200" /></a>
 
 </body>
 
